; ModuleID = '/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_nl.c_nl_close.c'
source_filename = "/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_nl.c_nl_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nl_sock = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nl_close(%struct.nl_sock* %0) #0 {
  %2 = alloca %struct.nl_sock*, align 8
  store %struct.nl_sock* %0, %struct.nl_sock** %2, align 8
  %3 = load %struct.nl_sock*, %struct.nl_sock** %2, align 8
  %4 = getelementptr inbounds %struct.nl_sock, %struct.nl_sock* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = icmp sge i32 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.nl_sock*, %struct.nl_sock** %2, align 8
  %9 = getelementptr inbounds %struct.nl_sock, %struct.nl_sock* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = call i32 @close(i32 %10)
  %12 = load %struct.nl_sock*, %struct.nl_sock** %2, align 8
  %13 = getelementptr inbounds %struct.nl_sock, %struct.nl_sock* %12, i32 0, i32 0
  store i32 -1, i32* %13, align 8
  br label %14

14:                                               ; preds = %7, %1
  %15 = load %struct.nl_sock*, %struct.nl_sock** %2, align 8
  %16 = getelementptr inbounds %struct.nl_sock, %struct.nl_sock* %15, i32 0, i32 1
  store i64 0, i64* %16, align 8
  ret void
}

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
